.k8s/auth-server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
spec:
  ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
      name: minecraft
  selector:
    app: auth-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
  template:
    metadata:
      labels:
        app: auth-server
    spec:
      containers:
        - image: rg.fr-par.scw.cloud/schematio/schematio-auth-server:staging
          imagePullPolicy: Always
          name: auth-server
          ports:
            - containerPort: 25565
              name: minecraft
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 1Gi
              cpu: 1000m
