.k8s/auth-server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schematio-auth
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - auth.staging.schemat.io
      secretName: auth-certificate
  rules:
    - host: auth.staging.schemat.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-server
                port:
                  number: 25565
